--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.12.0",
     "styled-components": "^6.1.1",
+    "sweetalert2": "^11.10.1",
     "yarn": "^1.22.19"
   },
   "devDependencies": {
